--- a/Frontend/src/styles/_loader.scss
+++ b/Frontend/src/styles/_loader.scss
@@ -11,9 +11,9 @@
   z-index: 999999;
 }
 .loader {
-  border: 16px solid #f3f3f3;
+  border: 16px solid white;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
+  border-top: 16px solid $primary-color;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
