--- a/Frontend/src/styles/_variables.scss
+++ b/Frontend/src/styles/_variables.scss
@@ -1,17 +1,25 @@
 $grey1:rgba(0,0,0, 0.7);
-$grey2:rgba(0,0,0, 0.4);
-$grey3:rgba(51, 51, 51, 0.3);
-$grey4: #b8b8b8;
+$grey2:#737070;
+$grey3:rgba(0,0,0, 0.4);
+$grey4:rgba(51, 51, 51, 0.3);
+$grey5: #b8b8b8;
+$red:#EB3B40;
 
 $primary-color:#1FBCD3;
 $secondary-color:#93E7EF;
 $text-color:#fff;
 $popover-background:$grey1;
-$popover-shadow:$grey2;
-$header-shadow:$grey3;
+$popover-shadow: $grey3;
+$header-shadow: $grey4;
 $completed-status:#3AE1B0;
-$urgent-status:#EB3B40;
-$in-progress-status:$grey4;
+$urgent-status:$red;
+$list-color:$grey2;
+$in-progress-status: $grey5;
+$label-color: $grey2;
+$input-color: $grey2;
+$input-border-color: $grey2;
+$close-icon:$grey2;
+$error_message:$red;
 
 $breakpoints-desktop:800px;
 $breakpoints-tablet:600px;
