--- a/Frontend/src/styles/home.scss
+++ b/Frontend/src/styles/home.scss
@@ -1,19 +1,19 @@
 @import "globalStyles";
 
-.main{
+.home-page{
   background:$primary-color;
   left:0;
   right:0;
   bottom:0;
   top:0;
   position:fixed;
-}
-.content{
-  color:$text-color;
-  font-size:36px;
-  top:50%;
-  transform: translateY(-50%);
-  display: table;
-  margin:0 auto;
-  position:relative;
+  .content{
+    color:$text-color;
+    font-size:36px;
+    top:50%;
+    transform: translateY(-50%);
+    display: table;
+    margin:0 auto;
+    position:relative;
+  }
 }
